[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-hydro-dtm"
version = "0.1.0"
description = "AI-powered geospatial system for hydrological analysis and drainage network design"
authors = [
    {name = "Geo-AI Team", email = "team@intelligent-hydro-dtm.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "GDAL>=3.4.0",
    "rasterio>=1.3.0",
    "geopandas>=0.12.0",
    "shapely>=2.0.0",
    "pyproj>=3.4.0",
    "fiona>=1.8.0",
    "laspy>=2.3.0",
    "pdal>=3.2.0",
    "torch>=1.13.0",
    "torchvision>=0.14.0",
    "tensorflow>=2.11.0",
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "redis>=4.5.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "requests>=2.28.0",
    "httpx>=0.24.0",
    "matplotlib>=3.6.0",
    "plotly>=5.13.0",
    "folium>=0.14.0",
    "deap>=1.3.0",
    "pymoo>=0.6.0",
    "prometheus-client>=0.16.0",
    "structlog>=22.3.0",
    "mlflow>=2.2.0",
    "shap>=0.41.0",
    "python-dotenv>=1.0.0",
    "pydantic>=1.10.0",
    "typer>=0.7.0",
    "rich>=13.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.68.0",
    "black>=23.1.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/intelligent-hydro-dtm/intelligent-hydro-dtm"
Repository = "https://github.com/intelligent-hydro-dtm/intelligent-hydro-dtm"
Documentation = "https://intelligent-hydro-dtm.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"